[package]
name = "solana_anchor"
version = "0.1.0"
description = "Created with Anchor"
repository = "https://github.com/smartcontractkit/solana-example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
bytemuck = "1.7.2"
arrayref = "0.3.6"
spl-math = { version = "0.1.0",features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
borsh = "0.9"